- Fix bug causing tab counts not to be initialized when QM is disabled (313737)
- Use file contents to figure out which type of blocklist we are dealing with in IP filter (315239)
- Fix bug causing torrent percentage to be slightly off in the files tab (315549)
- Remove estimation algorithm option 
- Fix double click on subdirectory not working in fileview (337457)

Changes in 4.3.2:
- Backport ipfilter extraction fixes from master branch (315239)

Changes in 4.3.1:
- Fix new custom groups not appearing in add to group submenu (307230)
- Fix crash when right clicking on some locations in the GroupView due to 0 pointer (307160)
- Force KDirWatch to use polling when watching NFS filesystems (301381)
- Fix crash due to bus error in ip filter plugin (307854)
- First check for missing files then for unmounted storage (308638)
- Use extended selection mode in syndication plugin so ctrl key works as expected (308672)
- Fix crash in GroupViewModel when dragging torrents over groups (308733)
- Sort by total leechers and seeders, if connected seeders and leechers is equal (311470)
- Fix gzip not working in ipfilter plugin due to wrong mimetype (315239)

Changes in 4.3:
- Change default blocklist url to iblocklist.org (305109)

Changes in 4.3rc1:
- Add support for magnet links in the syndication plugin
- Add search line to download order dialog
- Add move top and bottom option to download order dialog (295341)
- Make sure that move up and move down in the download order dialog work with multiple items (295341)
- Also update file priorities when normal priority file completes downloading in download order plugin (296576)
- Add automatic sorting options to download order plugin (name, seasons and episodes, album track number) (295341)
- Make float comparison factor smaller in ViewModel when checking if share ratio has changed (297931)
- Show torrent count next to group in GroupView (176173)
- Add new GroupSwitcher widget
- Add edit group policy button to GroupSwitcher