@@ -1,0 +1,3 @@
+build
+.kdev4/
+ktorrent.kdev4
