@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<gui name="ktorrent" version="22">
+<gui name="ktorrent" version="23">
 <MenuBar>
   <Menu name="file"><text>&amp;File</text>
 	  <Action name="file_new"/>
@@ -8,7 +8,6 @@
 	  <Action name="paste_url"/>
 	  <Separator/>
 	  <Action name="import" />
-	  <Action name="import_kde3_torrents" />
 	  <Separator/>
 	  <Action name="ipfilter_action"/>
 	  <Merge/>
