@@ -16,6 +16,7 @@ Changes in 4.4:
 - Fix bug causing torrent percentage to be slightly off in the files tab (315549)
 - Remove estimation algorithm option 
 - Fix double click on subdirectory not working in fileview (337457)
+- Drop support for importing KDE3 torrents
 
 Changes in 4.3.2:
 - Backport ipfilter extraction fixes from master branch (315239)
